k8s/chataap-frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chatapp-frontend-server
  namespace: chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-app-frontend

  template:
    metadata:
      name: chat-app-frontend
      labels:
        app: chat-app-frontend
    spec:
      containers:
        - name: chat-app-frontend
          image: abhishekkargeti/chatapp-frontend-image:41
          ports:
            - containerPort: 80
