k8s/chataap-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-frontend-service
  namespace: production-namespace
spec:
  type: ClusterIP
  selector:
    app: chat-app-frontend
  ports:
    - port: 80
      targetPort: 80
