k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: chat-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"

spec:
  ingressClassName: nginx

  rules:
    - host: argocd.kargeti1.shop
      http:
        paths:

          # ChatApp frontend
          - path: /chatapp
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-service
                port:
                  number: 80

          # ChatApp REST API
          - path: /chatapi
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service
                port:
                  number: 8083

          # ChatApp WebSocket
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service
                port:
                  number: 8083
